src/components/components.css
* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  font-size: 16px;
  --dark-blue-color: #0E131C;
  --light-blue-color:#1d263a;
  --red-color: red;   
  --blue-color: #1C3157;                 
}
body {
  margin: 0;
  line-height: 1.35;
  width: 100%;
  height: 100%;
  background: var(--dark-blue-color);
  background-size: cover;
  overflow-y : scroll;
}
.background-blue {
  background-color: #0E131C;
}
.bg-img {
  background: url(./resources/backgroundimage.png) no-repeat;
  background-size: cover;
  width: 100%;
  height: 100%;
  z-index: -1;
  position:fixed;
  width:100%;
  height:100%;
  top:0px;
  left:0px;
}
#main {
  height: 100%;
  width: 100%;
}
/* universal selectors -------------------------- */

a , p , h1 , h2 , h3, li {
  color: white;
}
a {
  text-decoration: none;
  
}
h1 {
  font-size: 3rem;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: 300;
  text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.856);
  margin: 5px 0px;
}
h2 {
  font-size: 1.6rem;
  font-family: 'raleway';
  font-weight: 200;
}
h3 {
  font-size: 1.4rem;
  font-family: 'roboto';
  font-weight: 400;
}
p {
  font-family: 'roboto';
  font-weight: 400;
  font-size: 1.3rem;
}
.fixed {
  position: fixed;
}
.flex {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}
.grid {
  display: -ms-grid;
  display: grid;
}
.relative {
  position: relative;
}
.block {
  display: block;
}
.shadow {
  -webkit-box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
}
.under {
  text-decoration: underline;
}

/* other pages ------------------------------------ */
.main-container  h2, .main-container-pt h2 {
  font-size: 2.5rem;
  margin-bottom: 0px;
  font-family: 'roboto';
  font-weight: 400;
}
.mobile {
  animation: showMenu 300ms;
}
.main-container {
  width: 80%;
  margin: 0 auto;
  -ms-grid-columns: 60% 1fr;
  grid-template-columns: 60% 1fr;
}
.main-container-pt {
  width: 95%;
  margin: 0 auto;
  margin-left: 9%;
  -ms-grid-columns: 1fr;
  grid-template-columns: 1fr;
}
#red-border {
  height: 2px;
  background-color: var(--red-color);
  width: 13%;
}
#red-border2 {
  height: 4px;
  background-color: red;
  width: 40%;
}
.skills-containers {
  gap: 0.5rem;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-flow: row wrap;
          flex-flow: row wrap;
  margin-top: 1.5rem;
}
.in-text {
  font-family: 'Epilogue';
  font-size: 1.4rem;
  margin-top: 1.5rem;

}
.illus-img {
  margin-top: 10px;
  width: 40rem;
}
.newcontainer {
  position: fixed; 
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  z-index: -1;
}
.overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 8;
  height: calc(100% - 90px);
  top: 90px;
}
.detailsEdu {
  color: white;
  font-family: "roboto";
  cursor: pointer;
}
.detailsEdu summary {
  font-size: 1.3rem;
  text-decoration: none;
}
.detailsEdu details {
  padding: 10px;
  background-color: var(--blue-color);
  margin: 0.6rem 0 0.6rem 0;
}
.op-education {
  font-size: 1.3rem;
  line-height: 1.35;
  padding: 0 10px;
  margin: 0;
}
.op-education:hover {
  text-decoration: underline;
}
.rectangle {
  position: absolute;
  width: 1636.62px;
  height: 1083.08px;
  left: 40rem;
  top: 40rem;
  bottom: 0;
  z-index: -1;
  background: #FF0000;
  -webkit-transform: rotate(-34.51deg);
  -ms-transform: rotate(-34.51deg);
  transform: rotate(-34.51deg);     
 }
.jsimg {
  max-width: 100%;
  height: auto;
  border-radius: 5px;
}

.divcont {
  align-items: center;
}
.london {
  color: rgb(54, 161, 228);
  font-size: 1.3rem;
}
.hob-text {
  margin: 0px;
}
.img-hobbies {
  width: 100%;
}
.pt-container {
  margin-top: 2rem;
  gap: 20px;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: 2rem;
}

.pt-item {
  max-width: 375px;
  padding-bottom: 15px;
  background-color: #1d263a;
}
.pt-text {
  margin: 10px 0px;
}
.pt-pad {
  padding: 0px 15px;
}
.pt-img {
  width: 100%;
}
.pt-btn {
  border: none;
  color: white;
  background: none;
  font-size: 1.3rem;
  padding: 0px 5px 5px 0px;
  cursor: pointer;
}
.pt-btn-active {
  border-bottom: 1px solid var(--red-color);
}
/* buttons ------------------------------------ */
.btn-skills {
  font-size: 1.3rem;
  border: 4px solid #1C3157;
  background-color: #1C3157;
  text-align: center;
  padding: 0.4rem 2rem;
  margin:  0;
}
#intro-hidden {
  -webkit-transition: 1s;
  -o-transition: 1s;
  transition: 1s;
  display: none;
}
.check {
  color: white;
  position: relative;
  top: 3px;
  font-size: 1.2rem;
}
.intro-buttons {
  gap: 10px;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}
.redbtn {
  text-decoration: none;
  padding: 13px 34px;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
  -webkit-box-shadow: 0px 1px 2px black;
          box-shadow: 0px 1px 2px black;
  background-color: red;
  border: 2px solid red;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  font-weight: 400;
}
.redbtn:hover {
  color: red;
  background-color: white;
  border-color: white;
  transition: 500ms;
}

.redbtn:hover  svg, .whitebtn:hover svg {
  margin-left: 10px;
  -webkit-transition: 300ms;
  -o-transition: 300ms;
  transition: 300ms;
}

.aicon {
  position: relative;
  font-size: 25px;
  padding-left: 5px;
}
.adicon {
  position: relative;
  font-size: 25px;
  padding-left: 5px;
  top: 7px;
}
.link-red {
  color: red;
}
.link-red:hover {
  color: white;
  -webkit-transition: 300ms;
  -o-transition: 300ms;
  transition: 300ms;
}
.link-red:hover .adicon {
  top: 13px;
  -webkit-transition: 500ms;
  -o-transition: 500ms;
  transition: 500ms;
}
.tech-ul {
  margin: 0;
  padding-inline-start: 10px;
}
.tech-ul > li {
  margin-left: 10px;
  list-style-type: disc;
  display: list-item;
}

@-webkit-keyframes transitionIn {
  0% {
      opacity: 0;
      -webkit-transform: translate(-500px);
              transform: translate(-500px);
  }
  100% {
      opacity: 1;
      -webkit-transform: translate(0);
              transform: translate(0);
  }
}
@keyframes transitionIn {
  0% {
      opacity: 0;
      -webkit-transform: translate(-500px);
              transform: translate(-500px);
  }
  100% {
      opacity: 1;
      -webkit-transform: translate(0);
              transform: translate(0);
  }
}
@-webkit-keyframes showMenu {
  from {
    left: -100%;
  }
  to {
    left: 0%;
  }
}
@keyframes showMenu {
  from {
    left: -100%;
  }
  to {
    left: 0%;
  }
}
@-webkit-keyframes opacity {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes opacity {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
.animationjs {                                                                          /* ------------------ anim class------------------ */ 
  opacity: 100%;
  -webkit-animation: transitionIn 1s  both;
          animation: transitionIn 1s  both;
}

@media (max-width: 1440px) {
  p, a, .btn-skills, .detailsEdu summary {
    font-size: 1rem;
  }
  .rectangle {
    top: 30vh;
    /* testing */
  }
  .op-education {
    font-size: 1rem;
  }
  .main-container-pt {
    width: 92%;
    margin-left: 9%;
  }
}
@media (min-width: 1440px) {
  .main-container, .container {
    margin-top: 2rem;
  }
  .illus-img {
    width: 50rem;
  }
  .detailsEdu details {
    max-width: 95%;
  }
  
}
@media (max-width:1300px) {
  .container, .main-container-pt {
    margin-top: 100px;
  }
  .main-container-pt {
    margin: 100px auto;
    max-width: 1280px;
  }
  .main-container{
    width: 90%;
    -ms-grid-columns: 45% 1fr;
    grid-template-columns: 45% 1fr;
    margin-top: 100px;
  }
  .right-text {
    display: none;
  }
  .illus-img {
    padding-top: 5rem;
    width: 46vw;
    height: auto;
  }
  .btn-skills {
    font-size: 1rem;
  }
  .rectangle {
    width: 50rem;
    height: 1083.08px;
    left: 46rem;
    top: 32rem;
  }
  .desktop {
    display: none;
  }
  .close-btn {
    z-index: 11;
    position: fixed;
    top: 19px;
    left: 190px;
    background: none;
    border: none;
    border-radius: 6rem;
    -webkit-animation: opacity 1000ms;
            animation: opacity 1000ms;
  }
  .mdbtn {
    font-size: 2rem;
    cursor: pointer;
    -webkit-transition: 500ms;
    -o-transition: 500ms;
    transition: 500ms;
    border-radius: 5rem;
    color: red;
    background-color: white;
  }

}
@media (max-width:1220px) {
  body {
    overflow-y: scroll;
  }
  p {
   font-size: 1.2rem;
  }
}

@media (max-width:1100px) {
  .main-container {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }
  .rectangle {
    display: none;
  }
  .illus-img {
    width: 50rem;
  }
  .imgSlide {
    margin-top: 50px;
    margin-bottom: 50px;
  }
}
@media (max-width:940px) {
  .main-text {
    margin: 0 auto;
    min-width: 150px;
    
  }
  .main-container {
    width: 90%;
    padding-bottom: 4rem;
  }
  .illus-img {
    padding-top: 1rem;
  }
}  


@media (max-width: 700px){
  .me-photo {
    min-width: 450px;
    position: relative;
    right: 60px;
    z-index: -1;
  }
  .btn-skills, .check {
    font-size: 1rem;
  }
  .container {
    margin-top: 0px;
  }
  .close-btn {
    left: 250px;
  }
  .main-container-pt {
    width: 95%;
  }
}

